--- a/css/slick-theme.css
+++ b/css/slick-theme.css
@@ -124,7 +124,7 @@
     position: absolute;
     bottom: -25px;
 
-    display: block;
+    display: none;
 
     width: 100%;
     padding: 0;
@@ -138,7 +138,7 @@
 {
     position: relative;
 
-    display: inline-block;
+    display: none;
 
     width: 20px;
     height: 20px;
