--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+@import "./nav.css";
+
 /* css reset */
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   outline: none;
   border: none;
+  list-style-type: none;
 }
 
 body {
