--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import './hero.css';
 @import './detail-templete.css';
 @import './footer.css';
+@import './single-templete.css';
 /* css reset */
 
 * {
