--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import './detail-templete.css';
 @import './footer.css';
 @import './single-templete.css';
+@import './timeline.css';
 /* css reset */
 
 * {
