--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,28 +1,98 @@
-.timeline-parent{
+.timeline-parent {
     width: 100%;
     display: flex;
     justify-content: center;
     min-height: 80vh;
     align-items: center;
 }
-.slider-timeline{
+
+.slider-timeline {
     height: 100%;
     width: 70%;
     display: flex;
-    align-items: center;
 }
-.slider-timeline > div{
+
+.slider-timeline>div {
     padding: 20px;
     min-width: 50%;
 }
-.timeline-sec{
+
+.slide-control {
+    position: relative;
+}
+
+.svg {
+    position: absolute;
+    bottom: -130px;
+    right: -10px;
+
+}
+
+.svg svg {
+    width: 90%;
+}
+
+.result {
+    top: 50px;
+    width: 60%;
+    height: 520px;
+    box-shadow: 0px 0px 5px 0px rgb(200, 211, 226);
+    position: absolute;
+    z-index: 4;
+    border-radius: 10px;
+    background-color: #fff;
+}
+
+.tab-result {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.code-result {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: none;
+    top: 0;
+}
+
+.code-result img {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    border-radius: 10px;
+}
+
+.timeline-sec {
     display: flex;
     flex-direction: column;
 }
-.topic{
+
+.topic {
     margin: 20px 0;
 }
-.topic p{
+
+.block {
+    display: block;
+    animation: opacity 2s ease 1;
+}
+
+@keyframes opacity {
+    from {
+        opacity: .5
+    }
+
+    ;
+
+    top {
+        opacity: 1;
+    }
+
+    ;
+}
+
+.topic p {
     text-align: left;
     color: gray;
     font-size: 1rem;
@@ -30,10 +100,12 @@
     line-height: 1.5;
     margin: 10px 0;
 }
-.topic h3{
+
+.topic h3 {
     font-size: 1.5rem;
 }
-.timeline p{
+
+.timeline p {
     text-align: left;
     color: rgb(4, 16, 63);
     font-size: 1.2rem;
@@ -41,21 +113,32 @@
     line-height: 1.5;
     margin: 0 20px;
 }
-.timeline{ 
+
+.timeline {
     position: relative;
 
 }
-.timeline::after{
+
+.timeline::after {
     content: "";
     width: 5px;
-    height: 400px;
+    height: 355px;
     background-color: rgb(228, 228, 250);
     display: inline-block;
     position: absolute;
     left: 50px;
     top: 20px;
 }
-.timeline div{
+.timeline::before{
+    content: url(../img/timeline.svg);
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    bottom: -40px;
+    left: 37px;
+    z-index: 4;
+}
+.timeline div {
     display: flex;
     width: 80%;
     align-items: flex-start;
@@ -65,13 +148,13 @@
     padding: 20px;
     border-radius: 10px;
 }
-.timeline div:not(div:first-child){
-    /* margin: 30px 0; */
 
-}
-.timeline span {
+
+.span {
     width: 70px;
-    height: 27px;border-radius: 30px;background-color: rgb(231, 231, 241);
+    height: 27px;
+    border-radius: 30px;
+    background-color: rgb(231, 231, 241);
     display: flex;
     justify-content: center;
     padding: 5px 0;
@@ -79,14 +162,59 @@
     position: relative;
     z-index: 4;
 }
-.timeline div:hover span {
+
+.box-shadow {
+    box-shadow: 0px 0px 10px 0px rgb(233, 235, 238);
+
+}
+
+.box-shadow span {
     background-color: rgb(32, 214, 93);
     color: #fff;
-}
-.timeline div:hover{
-    box-shadow: 0px 0px 10px 0px rgb(233, 235, 238);
-}
-@media screen and (max-width:768px){
-    .slider-timeline{flex-wrap: wrap;}
 
+}
+
+.timeline h6 {
+    text-align: center;
+    font-size: 1rem;
+    color: gray;
+    font-weight: normal;
+    position: absolute;
+    bottom: -25px;
+    left: 90px;
+}
+
+@media screen and (max-width:800px) {
+    .slide-control {
+        display: none;
+    }
+
+    .slider-timeline {
+        width: 100%;
+    }
+
+    .timeline div {
+        width: 100%;
+    }
+
+    .timeline p {
+        font-size: 1.1rem;
+    }
+    .topic{
+        text-align: center;
+        max-width: 65%;
+    }
+    .topic p{
+        text-align: center;
+    }
+    .timeline-sec{
+        justify-content: center;
+        align-items: center;
+
+    }
+}
+@media screen and (min-width:800px) and (max-width:1200px){
+    .slider-timeline{
+        width: 90%;
+    }
 }
