--- a/css/detail-templete.css
+++ b/css/detail-templete.css
@@ -6,8 +6,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .left-section{
-    min-width: 60%;
+    width: 70%;
 
+}
+.right-section{
+    width: 30%;
 }
 .left-section img{
     width: 90%;
@@ -21,6 +24,7 @@
 }
 #tab-1,#tab-2,#tab-3,#tab-4{
     display: none;
+    transition: all .2s ease;
 }
 .lab{
     width: 100%;
@@ -35,6 +39,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* width: 200px; */
     padding: 0 30px;
 }
 .description{
@@ -157,12 +162,20 @@ td{
 @media screen and (max-width:700px){
     .parent{
         flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
     }
     .lab label{
         padding: 0 10px;
     }
 }
 @media screen and (max-width:768px){
+    .left-section{
+        width: 100%;
+    }
+    .right-section{
+        width: 100%;
+    }
     .lab label{
         font-size: .6rem;
     }
