--- a/css/footer.css
+++ b/css/footer.css
@@ -126,7 +126,7 @@ footer a:hover {
         padding: 10px 0;
     }
     .hide div{margin: 15px 0;}
-    .hide a,i{
+    .hide a,.hide i{
         margin: 10px;
         font-size: 20px;
         color: #ffff;
